--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@gsap/react": "^2.1.1",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^5.1.1",
     "classnames": "^2.5.1",
     "dotenv": "^17.0.1",
     "framer-motion": "^11.2.6",
-    "next": "14.2.3",
-    "nodemailer": "^7.0.4",
+    "next": "16.1.5",
+    "nodemailer": "7.0.11",
     "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
@@ -30,8 +29,8 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.6",
     "typescript": "^5"
   }
 }
